feat(api): add endpoints to connect CRM with Twilio services

--- a/env/dev/.env.example
+++ b/env/dev/.env.example
@@ -1,1 +1,13 @@
-# dev env example
+# APP
+APP_HOST=""
+APP_TOKEN=""
+
+# PLANFIX
+PANFIX_API_URL=""
+PANFIX_AUTH_KEY=""
+
+# TWILIO
+TWILIO_ACCOUNT_SID=""
+TWILIO_AUTH_TOKEN=""
+TWILIO_NUMBER=""
+SIP_CLIENT_ADDRESS=""
