--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,14 +1,29 @@
+# HTTP: redirect to HTTPS
 server {
     listen 80;
-    listen [::]:80;
     server_name  ${NGINX_HOSTNAME};
-
-    client_max_body_size 25M;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
         try_files $uri =404;
     }
+
+    # Redirect all HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS server
+server {
+    listen 443 ssl;
+    server_name  ${NGINX_HOSTNAME};
+
+    ssl_certificate /etc/letsencrypt/live/twilio-connector.vmdev.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/twilio-connector.vmdev.space/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         proxy_pass http://flask:8080;
@@ -16,22 +31,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
-
-    location = /favicon.ico {
-        access_log off;
-        log_not_found off;
-    }
-
-    location ~ /\.ht {
-        deny all;
-    }
-
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options DENY;
-    add_header X-XSS-Protection "1; mode=block";
 }
+
