refactor(nginx): use environment variable for SSL certificate paths

--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -19,8 +19,8 @@ server {
     listen 443 ssl;
     server_name  ${NGINX_HOSTNAME};
 
-    ssl_certificate /etc/letsencrypt/live/twilio-connector.vmdev.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/twilio-connector.vmdev.space/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
