--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       - ../../app:/app
     ports:
       - "5000:5000"
+  
+  redis:
+    image: redis:7-alpine
+    container_name: twilio-connector-redis-dev
+    ports:
+      - "6379:6379"
+
