refactor(env): rename env variables

--- a/env/dev/.env.example
+++ b/env/dev/.env.example
@@ -2,13 +2,15 @@
 APP_HOST=""
 APP_TOKEN=""
 
-# PLANFIX
-PLANFIX_USER=""
-PANFIX_API_URL=""
-PANFIX_AUTH_KEY=""
+# CRM
+CRM_USER=""
+CRM_API_URL=""
+CRM_AUTH_KEY=""
 
 # TWILIO
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
 TWILIO_NUMBER=""
+
+# SIP
 SIP_CLIENT_ADDRESS=""
